--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretty": "prettier --write ./* ./**/* --ignore-unknown",
+    "prettier:watch": "onchange \"./*\" \"./**/*\" -- prettier --write --ignore-unknown {{changed}}"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "onchange": "^7.1.0",
+    "prettier": "^2.8.7",
     "redis": "^4.6.5"
   }
 }
